fix(metricas): conserva el orden de los servicios y aisla el fallo de una sonda